--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- https://www.w3schools.com/css/css_navbar.asp -->
   <ul class="nav">
     <li class="bar"><a href="index.html">Home</a></li>
-    <li class="bar"><a href="index.html">Home</a></li>
+    <li class="bar"><a href="text.html">Text game</a></li>
   </ul>
   <header class="header">
     <h1>SQL GAMES</h1>
